manifests/proxy/glance-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: proxy-glance
  namespace: proxy
spec:
  externalName: hydra-0.orca-uaru.ts.net
  ports:
  - port: 30009
    targetPort: 0
  type: ExternalName
status:
  loadBalancer: {}
