manifests/proxy/linkding-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: proxy
  namespace: proxy
spec:
  externalName: hydra-0.orca-uaru.ts.net
  ports:
  - port: 30010
    targetPort: 0
  type: ExternalName
status:
  loadBalancer: {}
