manifests/proxy/vaultwarden-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: proxy-vaultwarden
  namespace: proxy
spec:
  externalName: hydra-0.orca-uaru.ts.net
  ports:
  - port: 30012
    targetPort: 0
  type: ExternalName
status:
  loadBalancer: {}
