manifests/proxy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls.certresolver: default
  name: proxy-ingress
  namespace: proxy
spec:
  ingressClassName: traefik
  rules:
  - host: link.danicos.me
    http:
      paths:
      - backend:
          service:
            name: proxy
            port:
              number: 30010
        path: /
        pathType: Prefix
  - host: photos.danicos.me
    http:
      paths:
      - backend:
          service:
            name: proxy-immich
            port:
              number: 30011
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - link.danicos.me
    - photos.danicos.me
status:
  loadBalancer: {}
